Shortcuts dialog GM3 restyling
Update the shortcuts dialog to material 3.
Screenshot: https://screenshot.googleplex.com/4QYnrHyEw5WmYK7

It is currently only used in the recorder panel, but We are planning to reuse this component in the performance panel.

Bug: 377668442
Change-Id: If56f2f57f31f17150de91f24ecea1bac75298d1f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999260
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/ui/components/dialogs/dialog.css
+++ b/front_end/ui/components/dialogs/dialog.css
@@ -17,7 +17,6 @@ dialog::backdrop {
 dialog {
   background: transparent;
   border: none;
-  border-radius: 4px;
   top: var(--dialog-top);
   padding: var(--dialog-padding);
   left: var(--dialog-left);
@@ -29,6 +28,7 @@ dialog {
   animation-duration: 100ms;
   animation-timing-function: cubic-bezier(0, 0, 0.3, 1);
   overflow: hidden;
+  filter: drop-shadow(0 4px 8px rgb(0 0 0 / 15%)) drop-shadow(0 1px 3px rgb(0 0 0 / 30%));
 }
 
 dialog:focus,
@@ -39,7 +39,7 @@ dialog:focus-visible {
 #content {
   min-width: var(--content-min-width);
   background: var(--color-background-elevation-dark-only);
-  border-radius: 4px;
+  border-radius: var(--sys-size-5);
   padding-top: var(--content-padding-top);
   padding-bottom: var(--content-padding-bottom);
   box-shadow: var(--override-content-box-shadow);
@@ -48,10 +48,6 @@ dialog:focus-visible {
   overflow: auto;
   outline: none;
   clip-path: polygon(var(--content-clip-path));
-}
-
-#content-wrap {
-  filter: drop-shadow(0 1px 2px rgb(60 64 67 / 30%)) drop-shadow(0 2px 0 rgb(60 64 67 / 15%));
 }
 
 @keyframes slideIn {
