[AI Assistance] Auto select agents for open panels
This CL updates the behavior to auto select an agent
based on the open panels.

In addition to that, updates `new chat` and `delete
chat` buttons to auto select agents too. Previously
it was selecting the last agent and now it'll select
the agent based on the open panel.

Fixed: 376431804
Change-Id: I2a5dda87c7364ac4d1f6a7521e45a9a6d672d8f4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999478
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -475,8 +475,9 @@ main {
   align-items: center;
   justify-content: center;
   font: var(--sys-typescale-headline4);
-  gap: var(--sys-size-11);
+  gap: var(--sys-size-8);
   padding: var(--sys-size-3);
+  max-width: var(--sys-size-33);
 
   /* Prevents the container from jumping when the scrollbar is shown */
   /* 688px is the max width of the input form + left and right paddings: var(--sys-size-36) + 2 * var(--sys-size-5)  */
@@ -516,6 +517,11 @@ main {
     h1 {
       font: var(--sys-typescale-headline4);
     }
+
+    p {
+      text-align: center;
+      font: var(--sys-typescale-body4-regular);
+    }
   }
 
   .empty-state-content {
@@ -534,12 +540,12 @@ main {
   gap: 10px;
   background-color: var(--sys-color-surface2);
   border-radius: var(--sys-shape-corner-medium-small);
-  width: var(--sys-size-32);
+  width: 100%;
   align-items: center;
 
   .feature-card-icon {
-    width: var(--sys-size-12);
-    height: var(--sys-size-12);
+    min-width: var(--sys-size-12);
+    min-height: var(--sys-size-12);
     display: flex;
     justify-content: center;
     align-items: center;
