[RPP] Add empty shortcuts dialog if the Alternative navigation experiment is on
Screenshot: https://screenshot.googleplex.com/ADxPrcNSf8GpfiR

Bug: 313757601
Change-Id: I347e2ad38521e8b20e766060955c838e861dadeb
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973694
Reviewed-by: Nancy Li <nancyly@chromium.org>
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -4,6 +4,11 @@
  * found in the LICENSE file.
  */
 
+.shortcuts-dialog {
+  /* overwrite 'white-space: pre' in the toolbar item parent element */
+  white-space: nowrap;
+}
+
 .keybinds-category-header {
   display: flex;
   justify-content: space-between;
