[AI Assistance] Fix placeholder color
Bug: 377227220
Change-Id: I94540ad71a8fe5fdeca799d0ff67170278e8035c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6003146
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -116,9 +116,14 @@
   }
 
   &:disabled {
-    color: var(--sys-color-on-surface-subtle);
+    color: var(--sys-color-state-disabled);
     background-color: var(--sys-color-state-disabled-container);
     border-color: transparent;
+
+    &::placeholder {
+      color: var(--sys-color-on-surface-subtle);
+      opacity: 100%;
+    }
   }
 }
 
