[GM3Restyling] Adjust settings page styles
This fixes a few settings page styles resulting from UX review, in
particular:

* Throttling and Locations: adjust to smaller card size
* Scrollbars: avoid layout shift due to scrollbars
* Cards: adjust setting card shadows, and max width

Bug: 368238837
Change-Id: I5761c3cbf9b17f67cee047c07d356218ccf2771c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6003764
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/sensors/locationsSettingsTab.css
+++ b/front_end/panels/sensors/locationsSettingsTab.css
@@ -10,7 +10,7 @@
 }
 
 .locations-list {
-  min-width: 340px;
+  margin-top: var(--sys-size-3);
   flex: auto;
 }
 
@@ -72,6 +72,7 @@
 }
 
 .settings-card-container-wrapper {
+  scrollbar-gutter: stable;
   padding-bottom: var(--sys-size-8);
   overflow: auto;
   position: absolute;
