--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -10,6 +10,7 @@
 }
 
 .conditions-list {
+  margin-top: var(--sys-size-3);
   flex: auto;
 }
 
@@ -23,7 +24,9 @@
 }
 
 .conditions-list-text {
-  flex: 0 0 80px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  flex: 0 0 50px;
   user-select: none;
   color: var(--sys-color-on-surface);
   text-align: center;
@@ -48,6 +51,9 @@
 
 .conditions-list-title-text {
   flex: auto;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .conditions-list-separator {
@@ -97,6 +103,7 @@
 }
 
 .settings-card-container-wrapper {
+  scrollbar-gutter: stable;
   padding-bottom: var(--sys-size-8);
   overflow: auto;
   position: absolute;
