--- a/front_end/panels/settings/settingsScreen.css
+++ b/front_end/panels/settings/settingsScreen.css
@@ -72,6 +72,7 @@ div:has(.settings-select) + div:has(.settings-select) {
 }
 
 .settings-card-container-wrapper {
+  scrollbar-gutter: stable;
   padding-bottom: var(--sys-size-8);
   overflow: auto;
   position: absolute;
