[AI Assistance] Implement the cancel button to restore context
Bug: 377227220
Change-Id: If009960bcc2571243eef3ad5072c8771686008c6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6000170
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -125,12 +125,32 @@
       opacity: 100%;
     }
   }
+
+  &.one-big-button {
+    /* start new chat button */
+    --right-padding: 100px;
+  }
+
+  &.two-big-buttons {
+    /* cancel + start new chat button */
+    --right-padding: 172px;
+  }
 }
 
-.chat-input-button {
+.chat-input-buttons {
   position: absolute;
   right: 0;
   bottom: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.chat-input-button {
+  padding-bottom: 3px;
+  padding-right: var(--sys-size-3);
+}
+
+.chat-cancel-context-button {
   padding-bottom: 3px;
   padding-right: var(--sys-size-3);
 }
