Update combobox backgkground color to transparent
Bug: 378427061
Change-Id: Ie55d382a7e3306fa0e135677d796f95e13bc05b2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6012183
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/recorder/recorderController.css
+++ b/front_end/panels/recorder/recorderController.css
@@ -65,7 +65,7 @@ select {
   padding: 0 var(--sys-size-6) 0 var(--sys-size-5);
   position: relative;
   color: var(--sys-color-on-surface);
-  background-color: var(--sys-color-cdt-base-container);
+  background-color: transparent;
   text-overflow: ellipsis;
   background-image: var(--combobox-dropdown-arrow);
   background-position: right center;
