--- a/front_end/panels/freestyler/components/userActionRow.css
+++ b/front_end/panels/freestyler/components/userActionRow.css
@@ -17,6 +17,7 @@
   gap: var(--sys-size-8);
   justify-content: space-between;
   align-items: center;
+  margin-block: calc(-1 * var(--sys-size-3));
 }
 
 .rate-buttons {
@@ -81,7 +82,7 @@
     overflow: auto hidden;
     scrollbar-width: none;
     gap: var(--sys-size-3);
-    padding-right: var(--sys-size-1);
+    padding: var(--sys-size-3);
   }
 
   .scroll-button-container {
