RPP: Put URL into flamechart popover if appropriate
To speed up identification/attribution of JS functions in particular.

Also normalize naming on 'popover', reducing usage of "highlightedEntryInfo".

Bug:368541957
Change-Id: I8379d4764512c2eaf5e76fb4c88b7e0a90cb46ec
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6007341
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelineFlamechartPopover.css
+++ b/front_end/panels/timeline/timelineFlamechartPopover.css
@@ -16,19 +16,29 @@
   margin-right: 5px;
 }
 
-.timeline-flamechart-popover span.timeline-info-network-time {
+.timeline-flamechart-popover span.popoverinfo-network-time {
   color: var(--sys-color-primary);
 }
 
-.timeline-flamechart-popover span.timeline-info-time {
+.timeline-flamechart-popover span.popoverinfo-time {
   color: var(--sys-color-green);
 }
 
-.timeline-flamechart-popover span.timeline-info-warning {
+.timeline-flamechart-popover span.popoverinfo-warning {
   color: var(--sys-color-error);
 }
 
-.timeline-flamechart-popover span.timeline-info-warning * {
+.timeline-flamechart-popover span.popoverinfo-url-path,
+.timeline-flamechart-popover span.popoverinfo-url-origin {
+  color: var(--sys-color-token-subtle);
+  font-size: 11px;
+}
+
+.timeline-flamechart-popover span.popoverinfo-url-origin {
+  font-style: italic;
+}
+
+.timeline-flamechart-popover span.popoverinfo-warning * {
   color: inherit;
 }
 
