Update color styling for file source icon so that it WAI in dark mode.
Screenshot - https://screenshot.googleplex.com/5SQkRCQ6XwUTK5e

Bug: 378566933
Change-Id: Id0f0e4905a9dfa999c9415df66f6b21dbf9cc1ea
Fixed: 378566933
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6018685
Auto-Submit: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/ui/components/icon_button/fileSourceIcon.css
+++ b/front_end/ui/components/icon_button/fileSourceIcon.css
@@ -5,20 +5,24 @@
  */
 
 :host {
+  devtools-icon.document {
+    color: var(--override-file-source-icon-color, var(--icon-default));
+  }
+
   devtools-icon.script,
   devtools-icon.sm-script,
   devtools-icon.snippet {
-    color: var(--icon-file-script);
+    color: var(--override-file-source-icon-color, var(--icon-file-script));
   }
 
   devtools-icon.stylesheet,
   devtools-icon.sm-stylesheet {
-    color: var(--icon-file-styles);
+    color: var(--override-file-source-icon-color, var(--icon-file-styles));
   }
 
   devtools-icon.image,
   devtools-icon.font {
-    color: var(--icon-file-image);
+    color: var(--override-file-source-icon-color, var(--icon-file-image));
   }
 
   devtools-icon.dot::before {
