[GM3Restyling] Fix focus ring for button links in stack previews.
Drive-by-fix: Also fix the incorrect background color for text
buttons used as links here.

Fixed: 378822139
Screenshot: https://i.imgur.com/FUQdHF0.png
Change-Id: I1219645b5dbb8ce0d7e15e348e17024bfdbf79b1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6017877
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/components/utils/jsUtils.css
+++ b/front_end/ui/legacy/components/utils/jsUtils.css
@@ -66,6 +66,14 @@
     overflow: hidden;
     text-overflow: ellipsis;
     padding-inline: 2px;
+
+    &.link {
+      overflow: visible;
+
+      & > button.text-button.devtools-link {
+        background-color: inherit;
+      }
+    }
   }
 
   &.width-constrained {
