[settings] Don't show borders for empty lists.
Drive-by-fix: Also fix an error that is thrown when the last item in a
list is removed.

Fixed: 378853303
Change-Id: I237bcb45dd2880bd0860ec76b49ae266951b5280
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6017890
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/listWidget.css
+++ b/front_end/ui/legacy/listWidget.css
@@ -7,10 +7,13 @@
 .list {
   flex: auto 0 1;
   overflow-y: auto;
-  border: 1px solid var(--sys-color-divider);
   flex-direction: column;
 
   --override-background-list-item-color: hsl(0deg 0% 96%);
+
+  &:has(div) {
+    border: var(--sys-size-1) solid var(--sys-color-divider);
+  }
 }
 
 .theme-with-dark-background .list,
