--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -128,7 +128,8 @@ devtools-issue-counter.main-toolbar {
 .toolbar-has-dropdown {
   justify-content: space-between;
   height: var(--sys-size-9);
-  padding: 0 var(--sys-size-3) 0 var(--sys-size-5);
+  padding: 0 var(--sys-size-2) 0 var(--sys-size-4);
+  margin: 0 var(--sys-size-2);
   gap: var(--sys-size-2);
   border-radius: var(--sys-shape-corner-extra-small);
 
@@ -152,17 +153,13 @@ devtools-issue-counter.main-toolbar {
   }
 
   &:focus-visible {
-    outline: 2px solid var(--sys-color-state-focus-ring);
+    outline: var(--sys-size-2) solid var(--sys-color-state-focus-ring);
   }
 
   &[disabled] {
     pointer-events: none;
     background-color: var(--sys-color-state-disabled-container);
     color: var(--sys-color-state-disabled);
-  }
-
-  &:first-child {
-    margin-left: var(--sys-size-2);
   }
 }
 
