[RPP] Populate shortcuts dialog with the default Timeline shortcuts
In the future we will populate it depending on the current navigation setting.
Screenshot: https://screenshot.googleplex.com/3S9S7PEVJ87LLcE

Bug: 313757601
Change-Id: I1ddb89cce220758fc6079f03ef9bea8d639197ae
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6025270
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: var(--sys-size-4) var(--sys-size-6) var(--sys-size-6) var(--sys-size-8);
+  padding: 0 var(--sys-size-6) var(--sys-size-5) var(--sys-size-8);
 }
 
 .keybinds-category-header-text {
@@ -26,7 +26,7 @@
   flex-direction: column;
   gap: var(--sys-size-4);
   margin: 0;
-  padding: 0 var(--sys-size-8);
+  padding: 0 var(--sys-size-8) var(--sys-size-3) var(--sys-size-8);
 }
 
 .keybinds-list-item {
@@ -47,6 +47,13 @@
 
 .keys-container {
   display: flex;
+  gap: var(--sys-size-3);
+}
+
+.shortcuts-for-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   gap: var(--sys-size-3);
 }
 
