[RPP] Add radio buttons for a setting to switch between navigation options
Only adding the radio buttons for now, it's not actually changing the setting.
Screenshot: https://screenshot.googleplex.com/Cw88Be7KKvtGtFn

Bug: 313757601
Change-Id: I5dfab67e2cce86385341d28a7223744f02a264f3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6031270
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -57,6 +57,13 @@
   gap: var(--sys-size-3);
 }
 
+.nav-radio-buttons {
+  display: flex;
+  flex-direction: column;
+  padding: 0 var(--sys-size-8);
+  gap: var(--sys-size-3);
+}
+
 .keybinds-key {
   display: flex;
   align-items: center;
