[GM3] Last item should not have border
Bug: none
Change-Id: Ie80de2899edcbdb937b1df1294b2390195d71e0c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6031271
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/settings/keybindsSettingsTab.css
+++ b/front_end/panels/settings/keybindsSettingsTab.css
@@ -29,6 +29,10 @@
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 30px 2fr 30px 30px;
   border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+
+  &:last-of-type {
+    border-bottom: unset;
+  }
 }
 
 .keybinds-list-item:focus-visible {
@@ -110,7 +114,8 @@
 }
 
 .keybinds-list-item-wrapper:has(:not(.keybinds-category-header):hover),
-.keybinds-list-item-wrapper:has(.keybinds-list-item:not(.keybinds-editing)):focus-within {
+.keybinds-list-item-wrapper:has(
+  .keybinds-list-item:not(.keybinds-editing)):focus-within {
   background: var(--sys-color-state-hover-on-subtle);
 }
 
