Fix Safari incompatibility with dt-checkbox
Change-Id: I7b4fe875b089b605028b1e585d2c83b7f1e25213
Bug: 379694205
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6028362
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/application/resourcesSidebar.css
+++ b/front_end/panels/application/resourcesSidebar.css
@@ -6,7 +6,7 @@
 
 .tree-outline {
   li.storage-group-list-item,
-  li.storage-group-list-item:not(:has(span[is="dt-checkbox"])) {
+  li.storage-group-list-item:not(:has(dt-checkbox)) {
     padding: 0 var(--sys-size-8) 0 var(--sys-size-3);
 
     &::before {
