--- a/front_end/panels/browser_debugger/xhrBreakpointsSidebarPane.css
+++ b/front_end/panels/browser_debugger/xhrBreakpointsSidebarPane.css
@@ -40,7 +40,7 @@
   background-color: var(--sys-color-tonal-container);
 }
 
-.breakpoint-entry [is="dt-checkbox"] {
+.breakpoint-entry dt-checkbox {
   max-width: 100%;
 }
 
