--- a/front_end/panels/lighthouse/lighthouseStartView.css
+++ b/front_end/panels/lighthouse/lighthouseStartView.css
@@ -112,7 +112,7 @@ input[type="radio"] {
     margin-bottom: 0;
   }
 
-  &:not(:has(span[is="dt-checkbox"])) {
+  &:not(:has(dt-checkbox)) {
     margin-bottom: 6px;
   }
 }
