--- a/front_end/panels/profiler/profileLauncherView.css
+++ b/front_end/panels/profiler/profileLauncherView.css
@@ -29,7 +29,7 @@
   margin-left: 22px;
 }
 
-.profile-launcher-view-content p [is="dt-checkbox"] {
+.profile-launcher-view-content p dt-checkbox {
   display: flex;
 }
 
