--- a/front_end/panels/security/sidebar.css
+++ b/front_end/panels/security/sidebar.css
@@ -46,7 +46,7 @@
 .tree-outline span {
   font: var(--sys-typescale-body4-medium);
 
-  &:hover:not(:has(span[is="dt-checkbox"])) .selection {
+  &:hover:not(:has(dt-checkbox)) .selection {
     background: transparent;
   }
 }
