--- a/front_end/panels/sources/navigatorTree.css
+++ b/front_end/panels/sources/navigatorTree.css
@@ -127,7 +127,7 @@
   }
 
   .tree-outline li:hover:not(.selected) .selection,
-  .tree-outline li:hover:not(:has(span[is="dt-checkbox"])) .selection {
+  .tree-outline li:hover:not(:has(dt-checkbox)) .selection {
     forced-color-adjust: none;
     background-color: Highlight;
   }
