--- a/front_end/panels/sources/sourcesPanel.css
+++ b/front_end/panels/sources/sourcesPanel.css
@@ -56,13 +56,13 @@
   margin-top: 0;
 }
 
-.scripts-debug-toolbar-drawer > [is="dt-checkbox"] {
+.scripts-debug-toolbar-drawer > dt-checkbox {
   display: none;
   padding-left: 3px;
   height: 28px;
 }
 
-.scripts-debug-toolbar-drawer.expanded > [is="dt-checkbox"] {
+.scripts-debug-toolbar-drawer.expanded > dt-checkbox {
   display: flex;
 }
 
