--- a/front_end/panels/webauthn/webauthnPane.css
+++ b/front_end/panels/webauthn/webauthnPane.css
@@ -116,7 +116,7 @@
   align-items: center;
   margin: auto;
 
-  &:has(span[is="dt-checkbox"]) {
+  &:has(dt-checkbox) {
     padding-bottom: 4px;
   }
 }
