--- a/front_end/ui/legacy/reportView.css
+++ b/front_end/ui/legacy/reportView.css
@@ -74,7 +74,7 @@
 .report-row {
   margin: 10px 0 2px 18px;
 
-  &:has(span[is="dt-checkbox"]) {
+  &:has(dt-checkbox) {
     margin-top: 7px;
   }
 }
