--- a/front_end/ui/legacy/treeoutline.css
+++ b/front_end/ui/legacy/treeoutline.css
@@ -47,7 +47,7 @@
   border-top-color: var(--sys-color-tonal-container);
 }
 
-.tree-outline li:hover:not(:has(span[is="dt-checkbox"])) .selection {
+.tree-outline li:hover:not(:has(dt-checkbox)) .selection {
   display: block;
   background-color: var(--sys-color-state-hover-on-subtle);
 }
