[RPP] Image delivery insight component
https://screenshot.googleplex.com/DnfY6A2YJY4uYDD

Bug: 372897377
Change-Id: If90698babae22459fd9eba33cdbf8fd238926702
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6035443
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/baseInsightComponent.css
+++ b/front_end/panels/timeline/components/insights/baseInsightComponent.css
@@ -131,6 +131,15 @@ dd.dl-title {
   align-items: center;
 }
 
+.image-ref {
+  display: inline-flex;
+  align-items: center;
+
+  &:not(:empty) {
+    padding-top: var(--sys-size-5);
+  }
+}
+
 .element-img {
   width: var(--sys-size-13);
   height: var(--sys-size-13);
@@ -194,16 +203,7 @@ ul.insight-icon-results {
   color: var(--sys-color-state-disabled);
 }
 
-.lcp-element {
-  display: inline-flex;
-  align-items: center;
-}
-
 .insight-results:not(:last-child) {
   border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
   padding-bottom: var(--sys-size-5);
-}
-
-.lcp-element:not(:empty) {
-  padding: inherit;
 }
