Add a new ButtonDialog
Bug: 379036632
Change-Id: I14998b07c75a63467f227fa075b7e7891994bb47
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6023182
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/dialogs/dialog.css
+++ b/front_end/ui/components/dialogs/dialog.css
@@ -50,6 +50,21 @@ dialog:focus-visible {
   clip-path: polygon(var(--content-clip-path));
 }
 
+.dialog-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--sys-size-5) var(--sys-size-5) var(--sys-size-5) var(--sys-size-8);
+}
+
+.dialog-header-text {
+  font: var(--sys-typescale-body2-medium);
+}
+
+.dialog-content {
+  padding: 0 var(--sys-size-8);
+}
+
 @keyframes slideIn {
   from {
     transform: translateY(var(--dialog-offset-y));
