[Cleanup] Make the short-cut closer to the one in Settings
Bug: none
Change-Id: I69992f6168da9fc22d69c0bd7ade57e6bb241f71
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6030775
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -24,16 +24,30 @@
 .keybinds-list {
   display: flex;
   flex-direction: column;
-  gap: var(--sys-size-4);
   margin: 0;
   padding: 0 var(--sys-size-8) var(--sys-size-3) var(--sys-size-8);
 }
 
 .keybinds-list-item {
-  display: flex;
-  align-items: center;
+  display: grid;
+  align-items: baseline;
   justify-content: space-between;
-  gap: 30px;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr var(--sys-size-11) 1fr;
+  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+  padding: var(--sys-size-4) 0;
+
+  &:last-of-type {
+    border-bottom: unset;
+  }
+
+  .keybinds-list-title {
+    grid-row: 1/1;
+  }
+
+  .shortcuts-for-actions {
+    grid-area: auto / 3 / auto / span 1;
+  }
 }
 
 .keybinds-list-text {
