[RPP] Replace adhoc number formatting with i18n module
Additionally:

* Modify the progress status dialog for recording a trace to update
  every 0.1s instead of 1000s, and display the time in "x.x s" format
* For the same progress status dialog, use `tabular-nums` font variant
  to prevent seconds text from jumping around

Fixed: 372723536
Change-Id: I4798d81b4335ef60265e352f02e0dec92a4c16c8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6039734
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelineStatusDialog.css
+++ b/front_end/panels/timeline/timelineStatusDialog.css
@@ -20,6 +20,7 @@
   min-height: auto;
   display: flex;
   align-items: baseline;
+  font-variant-numeric: tabular-nums;
 }
 
 .status-dialog-line .label {
