[RPP] Show throttling and device emulation in trace history dropdown
Also removes the duration and time.

https://i.imgur.com/k0otYyv.png

Bug: 311438203
Change-Id: I813eddb7e3e77d1e3c387ad8201ffa42d3dd4ca8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6035852
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelineHistoryManager.css
+++ b/front_end/panels/timeline/timelineHistoryManager.css
@@ -19,7 +19,7 @@
   padding: 6px 10px;
   position: relative;
 
-  .time {
+  .metadata {
     margin-left: 3px;
   }
 
@@ -42,8 +42,12 @@
   height: 100%;
 }
 
+.text-details {
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .text-details > span {
-  flex: 1 0;
   padding-left: var(--sys-size-5);
   padding-right: var(--sys-size-5);
 }
@@ -52,7 +56,7 @@
   font: var(--sys-typescale-body4-medium);
 }
 
-.text-details span.time {
+.text-details .metadata {
   color: var(--sys-color-token-subtle);
   font: var(--sys-typescale-body4-regular);
   text-align: right;
