--- a/front_end/panels/security/cookieReportView.css
+++ b/front_end/panels/security/cookieReportView.css
@@ -27,10 +27,10 @@
   .title {
     font: var(--sys-typescale-headline4);
   }
+}
 
-  .body {
-    font: var(--sys-typescale-body4-regular);
-  }
+.body {
+  font: var(--sys-typescale-body4-regular);
 }
 
 .x-link {
@@ -47,4 +47,23 @@
 
 .data-grid {
   flex: auto;
+}
+
+.empty-report {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--sys-size-2);
+  padding: var(--sys-size-11) var(--sys-size-6) 0 var(--sys-size-6);
+  flex-shrink: 0;
+  min-width: var(--sys-size-31);
+}
+
+.empty-report-title {
+  font: var(--sys-typescale-headline5);
+}
+
+.cookie-off {
+  width: var(--sys-size-11);
+  height: var(--sys-size-11);
 }
