--- a/front_end/panels/security/cookieControlsView.css
+++ b/front_end/panels/security/cookieControlsView.css
@@ -28,6 +28,10 @@
   flex-direction: column;
   padding: var(--sys-size-6) var(--sys-size-8);
   gap: var(--sys-size-6);
+
+  &.enterprise-disabled {
+    color: var(--sys-color-token-subtle);
+  }
 }
 
 .card-header {
@@ -82,6 +86,14 @@
   color: var(--sys-color-primary);
   text-decoration-line: underline;
   cursor: pointer;
+}
+
+.enterprise {
+  display: flex;
+  flex-direction: row;
+  gap: var(--sys-size-9);
+  padding: var(--sys-size-6) var(--sys-size-8) var(--sys-size-6) var(--sys-size-11);
+  align-items: center;
 }
 
 input[type="checkbox"] {
