[RPP] Create new component for the summary pane
This replaces the pie chart with a bar representation.

https://screencast.googleplex.com/cast/NTQ3MjYzMDY2MzU0NDgzMnxiODA1MzkxYy0xMQ

Bug:378171303,368337883
Change-Id: Ia3d7a0bda3a2195e562e4edbd260ce7c252897b7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6012905
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -233,7 +233,8 @@
 .timeline-details-view-row-value {
   display: inline-block;
   user-select: text;
-  padding: 0 3px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .timeline-details-warning .timeline-details-view-row-value {
