[RPP Observations] Add warning when a field URL override is used
https://screenshot.googleplex.com/EhA4pVMcsV6QDi2

Bug: 356356641
Change-Id: Ib862b2486c6d07c91f628124ccdff9eac24b398a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6039876
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -277,6 +277,11 @@
   margin-bottom: 12px;
 }
 
+.field-data-warning {
+  margin-top: 4px;
+  color: var(--color-error-text);
+}
+
 .collection-period-range {
   font-weight: var(--ref-typeface-weight-medium);
 }
