--- a/front_end/panels/timeline/components/cpuThrottlingSelector.css
+++ b/front_end/panels/timeline/components/cpuThrottlingSelector.css
@@ -5,11 +5,14 @@
  */
 
 :host {
-  display: inline-block;
+  display: flex;
+  align-items: center;
   max-width: 100%;
-  min-width: 50px;
+  height: 20px;
 }
 
 devtools-select-menu {
+  min-width: 160px;
   max-width: 100%;
+  height: 20px;
 }
