Update shortcut dialog to use new ButtonDialog component
Bug: 379036632
Change-Id: I611a2b99febfa99043a4b42ef1141d6370ba8510
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6023184
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -4,11 +4,6 @@
  * found in the LICENSE file.
  */
 
-.shortcuts-dialog {
-  /* overwrite 'white-space: pre' in the toolbar item parent element */
-  white-space: nowrap;
-}
-
 .keybinds-category-header {
   display: flex;
   justify-content: space-between;
@@ -24,8 +19,9 @@
 .keybinds-list {
   display: flex;
   flex-direction: column;
+  /* overwrite default`margin` and `padding` for the <ul> element */
   margin: 0;
-  padding: 0 var(--sys-size-8) var(--sys-size-3) var(--sys-size-8);
+  padding: 0;
 }
 
 .keybinds-list-item {
