--- a/front_end/ui/components/docs/dialog/shortcut_dialog.html
+++ b/front_end/ui/components/docs/dialog/shortcut_dialog.html
@@ -23,6 +23,6 @@
 
   <body>
     <div id="container"></div>
-    <script src="./basic.js" type="module"></script>
+    <script src="./shortcut_dialog.js" type="module"></script>
   </body>
 </html>
