[RPP Observations] Warn if LCP increases due to emulation changes
Bug: 360379617
Change-Id: Ib9ff899faf78cc3181f17616192dc8ad8a8dc008
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6043070
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -279,7 +279,7 @@
 
 .field-data-warning {
   margin-top: 4px;
-  color: var(--color-error-text);
+  color: var(--sys-color-error);
 }
 
 .collection-period-range {
