--- a/front_end/panels/timeline/components/metricCard.css
+++ b/front_end/panels/timeline/components/metricCard.css
@@ -56,6 +56,11 @@
   font-weight: var(--ref-typeface-weight-medium);
 }
 
+.warning {
+  margin-top: 4px;
+  color: var(--sys-color-error);
+}
+
 .good-bg {
   background-color: var(--app-color-performance-good);
 }
