[RPP] Add border to radio buttons and switch a few keys in the shortcuts dialog
Bug: 313757601
Change-Id: I30f8aa9394e7489baef2509901a65c6320802c14
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6037605
Auto-Submit: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -70,8 +70,9 @@
 .nav-radio-buttons {
   display: flex;
   flex-direction: column;
-  padding: 0 var(--sys-size-8);
+  padding: 0 var(--sys-size-8) var(--sys-size-4) var(--sys-size-8);
   gap: var(--sys-size-3);
+  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
 }
 
 .keybinds-key {
