[memory] Fix focus ring and background color for heap source links.
Note that we have to use `!important` here, as the `.text-button` rule
already uses `padding: 0 !important`.

Drive-by-fix: Also add documentation for the `calc(-1 * var(..))`
CSS pattern.

Fixed: 380790928
Change-Id: I4342f092c60cedcc72952a16e55882b7789096ab
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6041986
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/profiler/heapProfiler.css
+++ b/front_end/panels/profiler/heapProfiler.css
@@ -118,6 +118,12 @@
 
 .heap-snapshot-view td.object-column span.heap-object-source-link {
   float: right;
+
+  & > button.text-button.devtools-link {
+    background-color: inherit;
+    outline-offset: calc(-1 * var(--sys-size-1));
+    padding-inline: var(--sys-size-2) !important;  /* stylelint-disable-line declaration-no-important */
+  }
 }
 
 .heap-snapshot-view td.object-column span.heap-object-source-link:empty {
